--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,5 @@
-name: Deploy to VPS
+name: Deploy to VPS (via self-hosted runner)
 
-# Trigger: Jalankan workflow ini setiap kali ada push ke branch 'main'
 on:
   push:
     branches:
@@ -8,42 +7,34 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted  # Ini wajib agar job dijalankan di Mac kamu
 
     steps:
-      # Langkah 1: Checkout kode dari repositori
-      - name: Checkout code
+      - name: 🔄 Checkout code
         uses: actions/checkout@v4
 
-      # Langkah 2: Hubungkan ke VPS dan jalankan perintah deployment
-      - name: SSH to VPS and Deploy
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_PRIVATE_KEY }}
-          script: |
-            # Masuk ke direktori proyek di VPS
-            cd ${{ secrets.VPS_TARGET_DIR }}
+      - name: 🚀 SSH ke VPS dan jalankan deployment
+        run: |
+          echo "🔐 Mulai koneksi SSH ke VPS..."
+          ssh -o StrictHostKeyChecking=no vps@192.168.254.200 << 'EOF'
+            set -e
+            echo "📁 Masuk ke direktori proyek..."
+            cd /home/vps/hki-app || git clone https://github.com/akhmadzaqiriyadi/hki-app.git
+            cd hki-app
+            echo "🔄 Menarik perubahan terbaru..."
+            git pull origin main
 
-            # Tarik perubahan terbaru dari GitHub
-            echo "🚚 Menarik perubahan terbaru dari branch main..."
-            git pull origin main || git clone https://github.com/akhmadzaqiriyadi/hki-app.git .
-
-            # Deploy Backend (Server)
-            echo "🚀 Memulai deployment backend..."
+            echo "🚀 Deploy Backend..."
             cd server
             npm install
             npm run build
             pm2 restart hki-backend || pm2 start dist/index.js --name "hki-backend"
-            echo "✅ Backend berhasil di-deploy."
 
-            # Deploy Frontend (Client)
-            echo "🚀 Memulai deployment frontend..."
+            echo "🚀 Deploy Frontend..."
             cd ../client
             npm install
             npm run build
             pm2 restart hki-frontend || pm2 start npm --name "hki-frontend" -- start
-            echo "✅ Frontend berhasil di-deploy."
 
-            echo "🎉 Deployment selesai!"
+            echo "✅ Deployment selesai!"
+          EOF
