--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "googleapis": "^154.0.0",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
@@ -42,6 +43,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.61.1",
     "react-pdf": "^9.2.1",
+    "recharts": "^3.1.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.10"
